# WikiMD

./: Cargo.toml  README.md  SEE_ALSO
.github/workflows/: rust.yml
crates/footnote/: Cargo.toml  README.md
crates/footnote/src/: lib.rs  main.rs
crates/footnote/tests/: basic_pages.rs
crates/footnote/tests/predone/: test1-good.md
crates/latex/: Cargo.toml  LICENSE  README.md
crates/latex/src/: latex.rs  lib.rs  main.rs
crates/latex/tests/: basic_pages.rs
crates/latex/tests/predone/: test1-block.md  test1-code.md  test1-inline.md
crates/testing/: Cargo.toml
crates/testing/src/: lib.rs
crates/toc/: Cargo.toml  README.md
crates/toc/examples/: basic_pages.rs
crates/toc/src/: lib.rs
crates/toc/tests/: basic_pages.rs
crates/toc/tests/predone/: test1-good.md  test1-too_few.md  test1-zero.md
src/: main.rs  toc.rs
