[package]
name = "markdown-it-footnotes"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Creates footnotes and lists of footnotes in Markdown documents."
readme = "README.md"
edition.workspace = true
repository.workspace = true

[dependencies]
markdown-it.workspace = true

[dev-dependencies]
testing.workspace = true
rstest.workspace = true
