[package]
name = "markdown-it-table-of-contents"
version = "0.1.0"
license = "BSD-3-Clause"
description = "Creates a table of contents in Markdown documents."

edition.workspace = true
repository.workspace = true
license-file.workspace = true
homepage.workspace = true

[dependencies]
markdown-it.workspace = true
unbox-box = "0.1.0"

[dev-dependencies]
testing.workspace = true
rstest.workspace = true
